History of this buildout
========================

6.0.9 (unreleased)
------------------

- Nothing changed yet.


6.0.8 (2016-04-05)
------------------

- We're good with __file__, so removing log entry again.  [jladage]


6.0.7.3 (2016-04-05)
--------------------

- Add log entry to see why the server can't find it, but locally it works fine.
  [jladage]


6.0.7.2 (2016-03-30)
--------------------

- Renamed old svg and placed new one with the baseline âVlaanderen is omgevingsbewust".
  [lhuiskes]


6.0.7.1 (2016-03-24)
--------------------

- Just __file__ will work within migration.py.  [jladage]


6.0.7 (2016-03-24)
------------------

- Open faceted_criteria.xml with full path.  [jladage]


6.0.6 (2016-03-24)
------------------

- Move faceted_criteria.xml to Products.minaraad.  [jladage]


6.0.5 (2016-03-18)
------------------

- Update nodejs.cfg to our common work style.
  [lhuiskes]

- MINA-133, Add HTTPS_PROXY environment variabele, since this is
  required by the requests module when doing https requests.

- MINA-126, Remove diazo rules/css for the toc.js
  and removed the lines from the minaraad.js if we only got 1 heading.
  [lhuiskes]

- MINA-132, Breadcrumb display: none for xs. [lhuiskes]

- MINA-126, Index nav-list diazo rules and styling. [lhuiskes]

- Migrate "Ruimtelijke Ordening" theme. MINA-125.  [jladage]

- Remove Hearing from addable type in a theme.  [jladage]

- SEO Properties should be enabled for Advisory, MREvent and Study.
  Fixed typos. MINA-128.  [jladage]

- Add styling for list-items inside article-theme-bodytext.  MINA-127.
  newsletter-mailchimp footer padding fix.
  article-vision a btn styling fix.  MINA-131
  [lhuiskes]

- Add image to Study on homepage. MINA-130.  [jladage]

- Related Documents to limitted, allow all types, also for study
  and event. MINA-124  [jladage]

- Rename label Nota to OriĂŤntatienota. MINA-129  [jladage]

- Fixed creating an advisory from a project.  MINA-123.  [maurits]
