@@ -52,6 +52,7 @@ Products.TALESField = 1.1.3
 Products.TemplateFields = 1.2.5
 Products.ZServerViews = 0.2
 pyPDF = 1.13
+pyPDF2 = 1.25.1
 python-archive = 0.2
 quintagroup.captcha.core = 0.4.3
 quintagroup.canonicalpath = 0.7
